# miniracket

./: .gitignore  .ocamlformat  .ocamlformat-ignore  dune  dune-project  main.ml  readme.md  runtime.c  runtime.h
examples/: array1.rkt  array2.rkt  fib.rkt  func1.rkt  func2.rkt  lambda1.rkt  lambda2.rkt  lambda3.rkt  lambda4.rkt  lambda5.rkt  tuple1.rkt  tuple2.rkt  tuple3.rkt
src/: allocate_registers.ml  ast.ml  ast_mon.ml  check_bounds.ml  convert_assignments.ml  convert_to_closures.ml  dune  explicate_control.ml  expose_allocation.ml  graph.ml  info.ml  inject_info.ml  interference_graph.ml  ir.ml  lexer.mll  limit_functions.ml  parser.mly  pass.ml  patch_instructions.ml  prelude_conclusion.ml  remove_complex_operands.ml  reveal_functions.ml  select_instructions.ml  type.ml  type_check.ml  uncover_get.ml  uncover_live.ml  uniquify.ml  utilities.ml  x86.ml
