(ocamllex lexer)

(menhir
 (modules parser))

(library
 (name src)
 (wrapped false)
 (libraries base)
 (modules
  allocate_registers
  ast_mon
  ast
  check_bounds
  convert_assignments
  convert_to_closures
  explicate_control
  expose_allocation
  graph
  info
  inject_info
  interference_graph
  ir
  lexer
  limit_functions
  parser
  patch_instructions
  prelude_conclusion
  remove_complex_operands
  reveal_functions
  select_instructions
  type_check
  type
  uncover_get
  uncover_live
  uniquify
  utilities
  x86))
